syntax = "proto3";

package auth;

option go_package = "auth.v1;authv1";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Refresh (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int32  app_id = 3;
  string fingerprint = 4;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string fingerprint = 2;
  int32  app_id = 3;
}
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}